// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon.styles > IconWrapper SHOULD match snapshot with all custom overrides active > complete layout evaluation 1`] = `
.c0 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  position: relative;
  color: #ff8b22;
  width: 32px;
  height: 16px;
  transition: transform 0.2s ease-in-out,color 0.2s;
  user-select: none;
  transform: rotate(90deg);
}

.c0 svg {
  width: 100%;
  height: 100%;
}

.c0 svg path,
.c0 svg circle,
.c0 svg rect {
  fill: currentColor!important;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Icon.styles > IconWrapper SHOULD match snapshot with default properties > standard render 1`] = `
.c0 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  position: relative;
  color: #999e9c;
  width: 24px;
  height: 24px;
  transition: transform 0.2s ease-in-out,color 0.2s;
  user-select: none;
  transform: none;
}

.c0 svg {
  width: 100%;
  height: 100%;
}

.c0 svg path,
.c0 svg circle,
.c0 svg rect {
  fill: currentColor!important;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Icon.styles > Image SHOULD match snapshot with default properties > standard render 1`] = `
.c0 {
  width: 100%;
  height: 100%;
}

<div>
  <img
    class="c0"
  />
</div>
`;
